@@ -12,7 +12,7 @@ public class Baraja {
 		this.mazoRobar = new ArrayList<Carta>();
 		this.mazoDescartar = new ArrayList<>();
 		inicializarBaraja();
-		//barajar();
+		barajar();
 	}
 	
 	// Crea el la baraja de juego con todas sus cartas
@@ -38,10 +38,6 @@ public class Baraja {
 			mazoRobar.add(new Carta("Negro", TipoCarta.COMODIN_TOMA_CUATRO, 50));
 		}
 	}
-	public static void main(String[] args) {
-		Baraja baraja = new Baraja();
-		System.out.println(baraja.mazoRobar);
-	}
 	
 	// Baraja el mazo de cartas
 	public void barajar() {
@@ -51,7 +47,7 @@ public class Baraja {
 	// Devueve la primera carta de mazoRobar si hay cartas dentro sino devuelve null
 	public Carta robarCarta() {
 		if (mazoRobar.isEmpty()) reconstruirMazoRobar();
-		return mazoRobar.isEmpty() ? mazoRobar.remove(0) : null;
+		return mazoRobar.isEmpty() ? null : mazoRobar.remove(0) ;
 	}
 	
 	// Añade una carta al mazoDescartar
@@ -72,6 +68,6 @@ public class Baraja {
 	
 	// Obtiene la ultima carta jugada en el mazo de descartes
 	public Carta obtenerUltimaCarta() {
-		return mazoDescartar.isEmpty() ? null : mazoDescartar.getLast();
+		return mazoDescartar.isEmpty() ? null : mazoDescartar.get(mazoDescartar.size() - 1);
 	}
 }
